auth controller service

--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,4 +1,6 @@
-<div class="min-h-screen flex items-center justify-center bg-gray-100 p-4">
+<!-- <app-sidebar> dasda </app-sidebar> -->
+
+ <div class="min-h-screen flex items-center justify-center bg-gray-100 p-4">
     <div class="bg-white rounded-xl shadow-[0_8px_30px_rgba(0,0,0,0.25)] p-8 w-full max-w-md mx-4">
 
         <div class="text-center mb-8">
@@ -65,4 +67,4 @@
             </div>
         </form>
     </div>
-</div>
+</div> 
