--- a/src/app/proveedor/proveedor.html
+++ b/src/app/proveedor/proveedor.html
@@ -176,7 +176,7 @@
                 <button
                   class="w-10 h-10 flex items-center justify-center rounded-2xl bg-red-500 hover:bg-red-600 text-white shadow-md transition transform hover:scale-110"
                   title="Eliminar"
-                  (click)="delete(p.id_proveedor!)"
+                  (click)="delete(p)"
                 >
                   <fa-icon [icon]="faTrash"></fa-icon>
                 </button>
